fixed cart empty styling on mobile

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -171,4 +171,4 @@
         margin-bottom: 10px
 
       p
-        text-align: center
+        padding: 0 32px
